k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deployment
  labels:
    app: todo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: kamranmiadi/todo-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
