k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-backend-pod
  labels:
    app: todo-backend
spec:
  containers:
  - name: todo-backend
    image: kamranmiadi/todo-backend:latest
    ports:
    - containerPort: 3000
