k8s/app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000 # Choose a port between 30000–32767
    name: http
