k8s/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080 # Choose a port between 30000–32767
    name: grafana
