k8s/prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090 # Choose a port between 30000–32767
    name: prometheus
