k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
    - host: todo.154.91.170.176.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-service
              port:
                number: 80
